Second Day Changes

--- a/WebAPIAuthentication/appsettings.json
+++ b/WebAPIAuthentication/appsettings.json
@@ -18,5 +18,14 @@
   "appsettings": {
     "apikey": "test"
 
+  },
+
+  "Jwt": {
+    "Key": "veryVerySecretKey",
+    "Issuer": "http://localhost:63939/",
+    "roles": [ "Admin", "SuperUser" ]
+  },
+  "ConnectionStrings": {
+    "MovieContext": "Data Source=MANGESH\\SQL2016;Initial Catalog=EPIServices;Integrated Security=False;User ID=sa;Password=********;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
